--- a/app/src/main/res/layout/content_signup.xml
+++ b/app/src/main/res/layout/content_signup.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/etfname"
         android:hint="Full Name"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="60dp"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="50dp"
@@ -69,6 +69,7 @@
         android:background="#d15351"
         android:layout_marginRight="50dp"
         android:text="Sign up"
+        android:onClick="Registered"
         android:textColor="#fff"
         android:id="@+id/btn_signUp"
         android:layout_marginBottom="100dp"
