--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -7,34 +7,36 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#f2f2f2"
+    android:padding="16dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_login2"
     tools:context="com.jshikami235gmail.pataride.login">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/tv_mail"
         android:id="@+id/textView14"
         android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/email_l"
-        android:layout_toStartOf="@+id/email_l"
         android:layout_marginTop="20dp"
-        android:textColor="#6c6c6c" />
+        android:textColor="#6c6c6c"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
+        android:textColor="#6c6c6c"
         android:id="@+id/email_l"
         android:layout_below="@+id/textView14"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="15dp" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/tv_pswd"
@@ -46,17 +48,17 @@
         android:textColor="#6c6c6c" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
+        android:textColor="#6c6c6c"
         android:ems="10"
         android:id="@+id/pwd_l"
         android:layout_below="@+id/textView15"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp" />
+        android:layout_centerHorizontal="true" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Sign in"
         android:background="#d15351"
@@ -71,7 +73,7 @@
 
     <Button
         style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Not signed up?"
         android:id="@+id/btnLinkToSignInScreen"
