--- a/app/src/main/res/layout/content_signup.xml
+++ b/app/src/main/res/layout/content_signup.xml
@@ -15,7 +15,7 @@
     tools:context="com.jshikami235gmail.pataride.Sign_up">
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/etfname"
         android:hint="Full Name"
@@ -31,7 +31,7 @@
         android:layout_alignParentStart="true" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/etEmail"
         android:textColor="#6c6c6c"
@@ -47,7 +47,7 @@
 
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:textColor="#6c6c6c"
@@ -78,7 +78,7 @@
         android:layout_alignStart="@+id/etPassword" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#f2f2f2"
         android:text="Login"
